--- a/Start.html
+++ b/Start.html
@@ -10,7 +10,7 @@
 
 // DOM = document (html bestand) object model(visueel)
 
-
+Nieuwe text
 
 // Klasse = blauwdruk template bouwtekening cakevorm ovenschaal plato-ideeUit een klasse giet je objecten. 
 //object = uitvoering invulling bouwsel cake lasagna fysieke object
